<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pagsweb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Paginas"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/pw1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Pw1"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/pw2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Pw2"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/pw3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Pw3"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/pw4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Pw4"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/pw5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Pw5"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/pw6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Pw6"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/pw7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/Pw7"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>