<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuUbicaciones">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/ubicaciones"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/u1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/ubic1"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/u2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/ubic2"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/u3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/ubic3"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/u4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/ubic4"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/u5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/ubic5"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/u6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:text="@string/ubic6"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:typeface="serif" />
            </LinearLayout>
        </ScrollView>
</RelativeLayout>